--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ li {
 }
 
 h3 {
-  margin-top: -10px;
+  margin-top: 0;
 }
 
 button.search {
@@ -33,6 +33,10 @@ button.location {
   padding: 10px 25px;
   background-color: #9772f3;
   color: #fff;
+}
+
+p.day {
+  margin-bottom: 0;
 }
 
 p.gitLink {
